--- a/pages/paymentPage/assets/css/style.css
+++ b/pages/paymentPage/assets/css/style.css
@@ -116,12 +116,18 @@ body {
 .car-details h2 {
     font-size: 24px;
     margin-bottom: 10px;
+    font-weight: bold; /* Make car name bold */
 }
 
+/* Make labels bold */
 .car-details p {
     font-size: 18px;
     color: #555;
     margin: 5px 0;
+}
+
+.car-details p strong {
+    font-weight: bold; /* Make the labels bold */
 }
 
 /* Payment Options */
@@ -211,8 +217,6 @@ body {
     }
 }
 
-
-
 /* Footer */
 footer {
     font-family: "Poppins";
@@ -225,8 +229,6 @@ footer {
 footer span {
     color: #ed5d8d;
 }
-
-
 
 .footer-container {
     display: flex;
