--- a/pages/paymentPage/assets/css/style.css
+++ b/pages/paymentPage/assets/css/style.css
@@ -89,7 +89,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 20px 40px;
+    padding: 20px 20px 40px;
     max-width: 900px;
     margin: auto;
     text-align: center;
@@ -321,6 +321,7 @@ footer span {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
     width: 100%;
+    height: 410px;
     max-width: 600px; /* Adjust max-width as needed */
 }
 
@@ -328,7 +329,7 @@ footer span {
 .user-details h2 {
     font-size: 2rem;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #ff007b;
 }
 
@@ -337,7 +338,7 @@ footer span {
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* Align items to the start */
-    margin-bottom: 20px; /* Space between form groups */
+    margin-bottom: 10px; /* Space between form groups */
     width: 100%;
 }
 
