--- a/pages/paymentPage/assets/css/style.css
+++ b/pages/paymentPage/assets/css/style.css
@@ -86,6 +86,7 @@ body {
 
 /* Payment Container */
 .payment-container {
+    font-family: "Poppins";
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,7 +97,8 @@ body {
 }
 
 /* Car Details */
-.car-details {
+.price-total {
+    font-family: "Poppins";
     background: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -106,37 +108,34 @@ body {
     margin-bottom: 20px;
 }
 
-.car-details img {
+.price-total img {
     width: 100%;
     max-width: 400px;
     border-radius: 10px;
     margin-bottom: 20px;
 }
 
-.car-details h2 {
+.price-total h2 {
     font-size: 24px;
     margin-bottom: 10px;
-    font-weight: bold; /* Make car name bold */
+    
 }
 
 /* Make labels bold */
-.car-details p {
+.price-total p {
     font-size: 28px;
     color: #555;
     margin: 5px 0;
-    font-weight: bold;
+    ;
 }
 
-.car-details span {
+.price-total span {
     font-size: 48px;
     color: #75c800;
     margin: 5px 0;
-    font-weight: bold;
+    
 }
 
-.car-details p strong {
-    font-weight: bold; /* Make the labels bold */
-}
 
 /* Payment Options */
 .payment-options {
@@ -151,7 +150,6 @@ body {
 
 .payment-options h2 {
     font-size: 2rem;
-    font-weight: 700;
     margin-bottom: 20px;
     color: #e9497e;
 }
@@ -321,15 +319,13 @@ footer span {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
     width: 100%;
-    height: 410px;
+    height: 420px;
     max-width: 600px; /* Adjust max-width as needed */
 }
 
 /* Heading */
 .user-details h2 {
     font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 10px;
     color: #ff007b;
 }
 
